fix: footer visibility

--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@
   box-sizing: border-box;
   font-family: "Comfortaa", cursive;
 }
-body {
+main {
+  min-height: 85vh;
 }
 header {
   border-bottom: 5px solid purple;
@@ -47,6 +48,8 @@ header {
   right: 4%;
 }
 .grid {
+  
+
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
@@ -66,7 +69,7 @@ footer {
   justify-content: space-around;
   align-items: center;
   background-color: transparent;
-  height: 12%;
+  height: 15vh
   width: 100%;
   padding: 2% 5%;
 }
